--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 langgraph
+langchain
+pandas
+scikit-learn
+sentence-transformers
+langchain-openai
+langchain-core
+langchain-text-splitters
+langchain-community
+langchain
+python-dotenv
+torch
+requests
+beautifulsoup4
+transformers
+numpy
 streamlit
-langchain 
-langchain_openai 
-langchain_community
+google-cloud-translate
